--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -749,8 +749,9 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LKe-lA-lY5">
                                 <rect key="frame" x="213" y="136" width="175" height="175"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="LKe-lA-lY5" secondAttribute="height" multiplier="1:1" id="aUY-AF-K5F"/>
-                                    <constraint firstAttribute="width" constant="175" id="yvk-Xm-bB1"/>
+                                    <constraint firstAttribute="height" constant="175" id="9Vq-cN-Jgu"/>
+                                    <constraint firstAttribute="width" secondItem="LKe-lA-lY5" secondAttribute="height" multiplier="1:1" id="rL4-m6-UIa"/>
+                                    <constraint firstAttribute="width" constant="175" id="vWe-df-Cud"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAi-gc-aY5">
@@ -773,6 +774,9 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w91-5I-4NM">
                                 <rect key="frame" x="213" y="502" width="175" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="X6K-sS-HGB"/>
+                                </constraints>
                                 <state key="normal" title="Log Out">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -784,7 +788,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-Pb-TOn">
                                 <rect key="frame" x="213" y="319" width="175" height="41"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="LIx-z2-WXy"/>
+                                    <constraint firstAttribute="height" constant="41" id="tGx-B0-CTB"/>
                                 </constraints>
                                 <state key="normal" title="Change Picture">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -795,41 +799,48 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iym-gX-wbc">
-                                <rect key="frame" x="275" y="444" width="50" height="50"/>
+                                <rect key="frame" x="263" y="455" width="75" height="75"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="0Cg-rr-x8n"/>
-                                    <constraint firstAttribute="height" constant="50" id="FKj-hX-4QT"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="Teb-Qk-v2P"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="5CD-6J-n7O"/>
+                                    <constraint firstAttribute="height" constant="75" id="AXu-aK-yu8"/>
+                                    <constraint firstAttribute="width" constant="50" id="Jv6-Pg-TQL"/>
+                                    <constraint firstAttribute="width" secondItem="iym-gX-wbc" secondAttribute="height" multiplier="1:1" id="X6f-Dq-rSn"/>
+                                    <constraint firstAttribute="height" constant="50" id="ddx-TX-VIh"/>
+                                    <constraint firstAttribute="width" constant="75" id="gjV-Im-jEy"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="5CD-6J-n7O"/>
+                                        <exclude reference="Jv6-Pg-TQL"/>
+                                        <exclude reference="ddx-TX-VIh"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="LKe-lA-lY5" firstAttribute="top" secondItem="8fg-bS-ykK" secondAttribute="bottom" constant="18" id="125-7b-S8S"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="leading" secondItem="8fg-bS-ykK" secondAttribute="leading" id="0K4-6R-6VH"/>
+                            <constraint firstItem="iym-gX-wbc" firstAttribute="top" secondItem="7J9-jc-wWG" secondAttribute="bottom" constant="8" id="3hR-j2-eyp"/>
+                            <constraint firstItem="LKe-lA-lY5" firstAttribute="leading" secondItem="Cul-Pb-TOn" secondAttribute="leading" id="61b-kf-Pjx"/>
+                            <constraint firstItem="7J9-jc-wWG" firstAttribute="trailing" secondItem="BcW-Tb-Smr" secondAttribute="trailing" id="A1h-7E-mrT"/>
+                            <constraint firstItem="Ei5-XH-jT5" firstAttribute="top" secondItem="w91-5I-4NM" secondAttribute="bottom" constant="8" id="AmA-x2-4jj"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="top" secondItem="Mwt-m4-WF0" secondAttribute="topMargin" constant="8" id="CMh-FI-aFA"/>
-                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="leading" secondItem="LKe-lA-lY5" secondAttribute="leading" id="Erp-se-wqN"/>
-                            <constraint firstItem="iym-gX-wbc" firstAttribute="top" secondItem="BcW-Tb-Smr" secondAttribute="bottom" constant="26" id="ExQ-LT-yad"/>
-                            <constraint firstItem="w91-5I-4NM" firstAttribute="top" secondItem="iym-gX-wbc" secondAttribute="bottom" constant="8" symbolic="YES" id="GmC-GD-bir"/>
-                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="top" secondItem="mAi-gc-aY5" secondAttribute="bottom" constant="8" id="IKE-fh-HKR"/>
-                            <constraint firstItem="mAi-gc-aY5" firstAttribute="leading" secondItem="8fg-bS-ykK" secondAttribute="leading" id="J7i-J5-ZLJ"/>
-                            <constraint firstItem="mAi-gc-aY5" firstAttribute="top" secondItem="Cul-Pb-TOn" secondAttribute="bottom" constant="8" symbolic="YES" id="VD5-MI-9dd"/>
-                            <constraint firstItem="mAi-gc-aY5" firstAttribute="leading" secondItem="BcW-Tb-Smr" secondAttribute="leading" id="Xh2-JJ-EYp"/>
-                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="trailing" secondItem="LKe-lA-lY5" secondAttribute="trailing" id="Ze1-y3-r37"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="top" secondItem="Cul-Pb-TOn" secondAttribute="bottom" constant="8" id="CVN-y4-BrY"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="trailing" secondItem="8fg-bS-ykK" secondAttribute="trailing" id="L5F-xm-EqG"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="leading" secondItem="7J9-jc-wWG" secondAttribute="leading" id="Mm1-x7-7cT"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="trailing" secondItem="mAi-gc-aY5" secondAttribute="trailing" id="NLa-wP-7ra"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="trailing" secondItem="w91-5I-4NM" secondAttribute="trailing" id="PdX-IX-gGQ"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="leading" secondItem="Mwt-m4-WF0" secondAttribute="leadingMargin" id="aRU-zt-wAz"/>
-                            <constraint firstItem="7J9-jc-wWG" firstAttribute="top" secondItem="BcW-Tb-Smr" secondAttribute="bottom" constant="8" id="aks-oV-bYh"/>
-                            <constraint firstItem="mAi-gc-aY5" firstAttribute="trailing" secondItem="BcW-Tb-Smr" secondAttribute="trailing" id="bE6-dJ-QYb"/>
-                            <constraint firstItem="w91-5I-4NM" firstAttribute="leading" secondItem="Cul-Pb-TOn" secondAttribute="leading" id="hfl-IL-qUL"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="top" secondItem="mAi-gc-aY5" secondAttribute="bottom" constant="8" id="ciZ-WQ-o2R"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="centerX" secondItem="Cul-Pb-TOn" secondAttribute="centerX" id="cqC-VL-tES"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="trailing" secondItem="LKe-lA-lY5" secondAttribute="trailing" id="fp6-OZ-sQr"/>
+                            <constraint firstItem="iym-gX-wbc" firstAttribute="centerX" secondItem="7J9-jc-wWG" secondAttribute="centerX" id="iDm-pI-qPX"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="trailing" secondItem="Mwt-m4-WF0" secondAttribute="trailingMargin" id="jLa-Te-TJs"/>
-                            <constraint firstItem="w91-5I-4NM" firstAttribute="trailing" secondItem="Cul-Pb-TOn" secondAttribute="trailing" id="jON-sn-QGb"/>
-                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="leading" secondItem="7J9-jc-wWG" secondAttribute="leading" id="jpi-LT-51i"/>
-                            <constraint firstItem="LKe-lA-lY5" firstAttribute="centerX" secondItem="8fg-bS-ykK" secondAttribute="centerX" id="o24-Pt-1xZ"/>
-                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="trailing" secondItem="7J9-jc-wWG" secondAttribute="trailing" id="p0U-e9-HJs"/>
-                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="top" secondItem="LKe-lA-lY5" secondAttribute="bottom" constant="8" symbolic="YES" id="paW-2C-wCV"/>
-                            <constraint firstItem="mAi-gc-aY5" firstAttribute="trailing" secondItem="8fg-bS-ykK" secondAttribute="trailing" id="q9y-z9-mrI"/>
-                            <constraint firstAttribute="bottom" secondItem="7J9-jc-wWG" secondAttribute="bottom" constant="153" id="s6q-Sr-S7v"/>
-                            <constraint firstItem="iym-gX-wbc" firstAttribute="centerX" secondItem="7J9-jc-wWG" secondAttribute="centerX" id="t68-bP-Pn2"/>
-                            <constraint firstItem="w91-5I-4NM" firstAttribute="top" secondItem="7J9-jc-wWG" secondAttribute="bottom" constant="55" id="vvT-xy-Ptn"/>
-                            <constraint firstItem="Ei5-XH-jT5" firstAttribute="top" secondItem="w91-5I-4NM" secondAttribute="bottom" constant="8" symbolic="YES" id="xor-cF-ICj"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="top" secondItem="LKe-lA-lY5" secondAttribute="bottom" constant="8" id="l6u-pH-UBf"/>
+                            <constraint firstItem="LKe-lA-lY5" firstAttribute="top" secondItem="8fg-bS-ykK" secondAttribute="bottom" constant="18" id="mqX-jp-MnW"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="leading" secondItem="w91-5I-4NM" secondAttribute="leading" id="nre-bc-Ybt"/>
+                            <constraint firstItem="7J9-jc-wWG" firstAttribute="top" secondItem="BcW-Tb-Smr" secondAttribute="bottom" constant="8" id="sB7-Fo-OJV"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="leading" secondItem="mAi-gc-aY5" secondAttribute="leading" id="xv7-Av-aRW"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eeV-09-31m"/>
